# OpenCamera

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  ROADMAP.md  SECURITY.md  cspell.json  package.json  pyproject.toml  requirements.txt  setup.py  sitecustomize.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  commit-policy.yml
algorithms/3a/: auto_exposure.cpp  auto_exposure.h
algorithms/isp/: debayer.cpp  debayer.h
benchmarks/: auto_exposure_benchmark.cpp
build-asan/: test_debayer_results.xml
cmake/: OpenCamConfig.cmake.in
core/include/opencam/: camera.h
core/src/: camera.cpp
docker/: Dockerfile.prod  Dockerfile.test
docs/: SPELL_CHECKING.md  index.md
examples/: auto_exposure_demo.cpp  camera_test.cpp
ml/training/: train_scene_classifier.py
python/api/: main.py
python/bindings/: pybind_auto_exposure.cpp  setup.py
python/opencam/: __init__.py  auto_exposure.py  baseline_exposure.py  benchmark.py  utils.py
scripts/: build.sh  compare_benchmarks.py  update_cspell.py
tests/: test_auto_exposure.cpp  test_debayer.cpp
tests/python/: test_auto_exposure.py  test_performance_vs_baseline.py
